added automatic parent package creation based on filename