@@ -7,24 +7,22 @@ import de.monticore.cdbasis._ast.ASTCDCompilationUnitBuilder;
 import de.monticore.cdbasis._ast.ASTCDDefinition;
 import de.monticore.cdbasis._ast.ASTCDPackage;
 import de.monticore.generating.templateengine.GlobalExtensionManagement;
-import de.monticore.lang.sysmlimportsandpackages._ast.ASTSysMLPackage;
 import de.monticore.lang.sysmlv2.SysMLv2Mill;
 import de.monticore.lang.sysmlv2._ast.ASTSysMLModel;
 import de.monticore.lang.sysmlv2._visitor.SysMLv2Traverser;
 import de.monticore.umlmodifier.UMLModifierMill;
-import java.util.Arrays;
-import java.util.stream.Collectors;
+import java.util.List;
 
 public class SysML2CDConverter {
   ASTCDDefinition astcdDefinition;
   ASTCDPackage cdPackage;
   ASTCDCompilationUnit cdCompilationUnit;
-  public SysML2CDData doConvert(ASTSysMLModel astSysMLModel, GlobalExtensionManagement glex) {
-    init(astSysMLModel);
+  public SysML2CDData doConvert(ASTSysMLModel astSysMLModel, GlobalExtensionManagement glex, String packageName) {
+    init(packageName);
     // Main class, names equally to the Automaton
 
     // Phase 1: Work on parts
-    Parts2CDVisitor phase1Visitor = new Parts2CDVisitor(glex, cdCompilationUnit, cdPackage);
+    Parts2CDVisitor phase1Visitor = new Parts2CDVisitor(glex, cdCompilationUnit, cdPackage, astcdDefinition);
     SysMLv2Traverser traverser = SysMLv2Mill.inheritanceTraverser();
     traverser.add4SysMLParts(phase1Visitor);
 
@@ -39,22 +37,15 @@ public class SysML2CDConverter {
   }
 
 
-  void init(ASTSysMLModel astSysMLModel){
+  void init(String packageName){
 
-    String name;
-    var ha = astSysMLModel.getSysMLElementList().stream().filter(t -> t instanceof ASTSysMLPackage).map(t -> ((ASTSysMLPackage) t).getName()).collect(
-        Collectors.toList());
-    if(!ha.isEmpty()){
-      name = ha.get(0);
-    }else {
-      name = "SysMLv2Generation";
-    }
+
     // Add a CDDefinition
-    astcdDefinition = CD4CodeMill.cDDefinitionBuilder().setName(name)
+    astcdDefinition = CD4CodeMill.cDDefinitionBuilder().setName(packageName)
         .setModifier(UMLModifierMill.modifierBuilder().build()).build();
     cdPackage = CD4CodeMill.cDPackageBuilder()
         .setMCQualifiedName(CD4CodeMill.mCQualifiedNameBuilder()
-            .setPartsList(Arrays.asList(name.toLowerCase()))
+            .setPartsList(List.of(packageName.toLowerCase()))
             .build())
         .build();
 
